[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Extensions/ExportExtras/Dialogs/ExportDialog.gd" type="Script" id=1]
[ext_resource path="res://src/Extensions/ExportExtras/Shaders/TransparentChecker.shader" type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/size = 10.0
shader_param/alpha = 1.0
shader_param/color1 = Color( 0.7, 0.7, 0.7, 1 )
shader_param/color2 = Color( 1, 1, 1, 1 )
shader_param/offset = Vector2( 0, 0 )
shader_param/scale = Vector2( 0, 0 )
shader_param/rect_size = Vector2( 0, 0 )
shader_param/follow_movement = false
shader_param/follow_scale = false

[node name="ExportDialog" type="ConfirmationDialog"]
margin_right = 456.0
margin_bottom = 468.0
window_title = "Export Extras"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 440.0
margin_bottom = 14.0
text = "Preview"

[node name="PreviewPanel" type="Panel" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 440.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransparentChecker" type="ColorRect" parent="VBoxContainer/PreviewPanel"]
unique_name_in_owner = true
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PreviewPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Previews" type="GridContainer" parent="VBoxContainer/PreviewPanel/ScrollContainer"]
unique_name_in_owner = true
margin_right = 440.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PreviewPanel/ScrollContainer/Previews"]
margin_right = 440.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="preview" type="TextureRect" parent="VBoxContainer/PreviewPanel/ScrollContainer/Previews/VBoxContainer"]
unique_name_in_owner = true
margin_right = 440.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 440.0
margin_bottom = 424.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 24.0
alignment = 2

[node name="InverseCCheckBox" type="CheckBox" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 329.0
margin_right = 440.0
margin_bottom = 24.0
text = "Flip Columns"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 440.0
margin_bottom = 52.0
alignment = 2

[node name="InverseRCheckBox" type="CheckBox" parent="VBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_left = 352.0
margin_right = 440.0
margin_bottom = 24.0
text = "Flip Rows"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 440.0
margin_bottom = 80.0
alignment = 2

[node name="IgnoreHLayersCheckBox" type="CheckBox" parent="VBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 292.0
margin_right = 440.0
margin_bottom = 24.0
text = "Ignore Hide Layers"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 440.0
margin_bottom = 108.0

[node name="PathLabel" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "Path:"

[node name="PathLineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 36.0
margin_right = 377.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PathButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 381.0
margin_right = 440.0
margin_bottom = 24.0
text = "Browse"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 440.0
margin_bottom = 136.0

[node name="FilenameLabel" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 63.0
margin_bottom = 19.0
text = "Filename:"

[node name="FilenameLineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 308.0
margin_bottom = 24.0
rect_min_size = Vector2( 241, 0 )
text = "untitled"
